# AI-G-DAO

./: IMPLEMENTATION_GUIDE.md  SUPABASE_SETUP.md  algokit.toml  vercel.json
.github/workflows/: main.yml
climate-dao/: README.md  climate-dao.code-workspace
climate-dao/projects/climate-dao/: .algokit.toml  README.md  pyproject.toml
climate-dao/projects/climate-dao/.algokit/: .copier-answers.yml
climate-dao/projects/climate-dao/smart_contracts/artifacts/hello_world/: HelloWorld.approval.puya.map  HelloWorld.approval.teal  HelloWorld.arc56.json  hello_world_client.py
climate-dao/projects/climate-dao/smart_contracts/milestone_dao/: MilestoneDAO.approval.puya.map  MilestoneDAO.approval.teal  MilestoneDAO.arc56.json  contract.py  deploy.py  deploy_contract.py
contracts/climate-dao/: README.md
docs/: README.md
frontend/: .gitignore  AI_ANALYSIS_FIX_SUMMARY.md  AI_ANALYSIS_IMPROVEMENTS.md  API_KEY_INSTRUCTIONS.md  COMPLETE_AI_SYSTEM.md  DEBUG_AI_ANALYSIS.md  DUPLICATE_POPUP_FIX.md  ENHANCED_AI_ANALYSIS.md  FIXES_SUMMARY.md  MODEL_UPDATE_FIX.md  PROPOSAL_SCORING_GUIDE.md  README_AI_FIX.md  TEST_DUPLICATE_DETECTION.md  package-lock.json  package.json  supabase-setup.sql  test-ai-analysis-improved.html  test-gemini-api.html
frontend/app/: globals.css  layout.tsx
frontend/components/: ai-review-display.tsx  connect-wallet-backup.tsx  connect-wallet.tsx  dashboard-page.tsx  join-dao-button.tsx  landing-page-backup.tsx  landing-page.tsx  location-picker.tsx  milestone-funding.tsx  notifications-panel.tsx  proposal-search-backup.tsx  proposal-search.tsx  (+6 more)
(+39 files in other folders)
